# DigitalLibrary

./: .gitignore  ARCHITECTURE.md  BACKUP.md  DEPLOY.md  LICENSE  README.md
backend/: Cargo.toml
backend/migrations/2026-03-05-000000_create_tables/: down.sql  up.sql
backend/migrations/2026-03-05-200000_add_libraries/: down.sql  up.sql
backend/migrations/2026-03-06-200000_add_archived/: down.sql  up.sql
backend/src/: auth.rs  db.rs  main.rs  models.rs  schema.rs
backend/src/routes/: auth.rs  books.rs  mod.rs  stats.rs  tags.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  api.ts  stores.ts
frontend/src/components/: BookForm.svelte  BookList.svelte  Login.svelte  StatsGraph.svelte  TagManager.svelte
scripts/: backup.sh  com.digitallibrary.backup.plist  com.digitallibrary.backup.plist.template  deploy.sh  install.sh
